portfolio-v3/src/App.css
:root {
  --primary-font-family: "Sora", sans-serif;
  --secondary-font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

.glass {
    /* From https://css.glass */
  background: rgba(26, 25, 29, 0.49);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
}

#sticky-nav {
  transform: translateY(-100%);
  transition: transform 0.3s ease-in-out;
}

#sticky-nav.show {
  transform: translateY(0);
}

#mobile-menu {
  transform: translateX(-100%);
  transition: transform 0.3s ease-in-out;
}

#mobile-menu.show {
  transform: translateX(0);
}

.cover {
  background: radial-gradient(#003037, #1A191D);
  -webkit-overflow-Y: hidden;
  -moz-overflow-Y: hidden;
  -o-overflow-Y: hidden;
  overflow-y: hidden;
  -webkit-animation: fadeIn 1 1s ease-out;
  -moz-animation: fadeIn 1 1s ease-out;
  -o-animation: fadeIn 1 1s ease-out;
  animation: fadeIn 1 1s ease-out;
}

.cover-fade {
  background: linear-gradient(to bottom, rgba(0,0,0,0), 75%, #1A191D);
}

@-webkit-keyframes fadeIn{
  from{opacity: 0;}
  to{opacity: 1;}
}

@-moz-keyframes fadeIn{
  from{opacity: 0;}
  to{opacity: 1;}
}

@-o-keyframes fadeIn{
  from{opacity: 0;}
  to{opacity: 1;}
}

@keyframes fadeIn{
  from{opacity: 0;}
  to{opacity: 1;}
}

.light {
    position: absolute;
    width: 0px;
    opacity: .75;
    background-color: white;
    box-shadow: #e9f1f1 0px 0px 20px 2px;
    opacity: 0;
    top: 100vh;
    bottom: 0px;
    left: 0px;
    right: 0px;
    margin: auto;
}

.x1{
  -webkit-animation: floatUp 4s infinite linear;
  -moz-animation: floatUp 4s infinite linear;
  -o-animation: floatUp 4s infinite linear;
  animation: floatUp 4s infinite linear;
   -webkit-transform: scale(1.0);
   -moz-transform: scale(1.0);
   -o-transform: scale(1.0);
  transform: scale(1.0);
}

.x2{
  -webkit-animation: floatUp 7s infinite linear;
  -moz-animation: floatUp 7s infinite linear;
  -o-animation: floatUp 7s infinite linear;
  animation: floatUp 7s infinite linear;
  -webkit-transform: scale(1.6);
  -moz-transform: scale(1.6);
  -o-transform: scale(1.6);
  transform: scale(1.6);
  left: 15%;
}

.x3{
  -webkit-animation: floatUp 2.5s infinite linear;
  -moz-animation: floatUp 2.5s infinite linear;
  -o-animation: floatUp 2.5s infinite linear;
  animation: floatUp 2.5s infinite linear;
  -webkit-transform: scale(.5);
  -moz-transform: scale(.5);
  -o-transform: scale(.5);
  transform: scale(.5);
  left: -15%;
}

.x4{
  -webkit-animation: floatUp 4.5s infinite linear;
  -moz-animation: floatUp 4.5s infinite linear;
  -o-animation: floatUp 4.5s infinite linear;
  animation: floatUp 4.5s infinite linear;
  -webkit-transform: scale(1.2);
  -moz-transform: scale(1.2);
  -o-transform: scale(1.2);
  transform: scale(1.2);
  left: -34%;
}

.x5{
  -webkit-animation: floatUp 8s infinite linear;
  -moz-animation: floatUp 8s infinite linear;
  -o-animation: floatUp 8s infinite linear;
  animation: floatUp 8s infinite linear;
  -webkit-transform: scale(2.2);
  -moz-transform: scale(2.2);
  -o-transform: scale(2.2);
  transform: scale(2.2);
  left: -57%;
}

.x6{
  -webkit-animation: floatUp 3s infinite linear;
  -moz-animation: floatUp 3s infinite linear;
  -o-animation: floatUp 3s infinite linear;
  animation: floatUp 3s infinite linear;
  -webkit-transform: scale(.8);
  -moz-transform: scale(.8);
  -o-transform: scale(.8);
  transform: scale(.8);
  left: -81%;
}

.x7{
  -webkit-animation: floatUp 5.3s infinite linear;
  -moz-animation: floatUp 5.3s infinite linear;
  -o-animation: floatUp 5.3s infinite linear;
  animation: floatUp 5.3s infinite linear;
  -webkit-transform: scale(3.2);
  -moz-transform: scale(3.2);
  -o-transform: scale(3.2);
  transform: scale(3.2);
  left: 37%;
}

.x8{
  -webkit-animation: floatUp 4.7s infinite linear;
  -moz-animation: floatUp 4.7s infinite linear;
  -o-animation: floatUp 4.7s infinite linear;
  animation: floatUp 4.7s infinite linear;
  -webkit-transform: scale(1.7);
  -moz-transform: scale(1.7);
  -o-transform: scale(1.7);
  transform: scale(1.7);
  left: 62%;
}

.x9{
  -webkit-animation: floatUp 4.1s infinite linear;
  -moz-animation: floatUp 4.1s infinite linear;
  -o-animation: floatUp 4.1s infinite linear;
  animation: floatUp 4.1s infinite linear;
  -webkit-transform: scale(0.9);
  -moz-transform: scale(0.9);
  -o-transform: scale(0.9);
  transform: scale(0.9);
  left: 85%;
}

@-webkit-keyframes floatUp{
  0%{top: 100vh; opacity: 0;}
  25%{opacity: 1;}
  50%{top: 0vh; opacity: .8;}
  75%{opacity: 1;}
  100%{top: -100vh; opacity: 0;}
}
@-moz-keyframes floatUp{
  0%{top: 100vh; opacity: 0;}
  25%{opacity: 1;}
  50%{top: 0vh; opacity: .8;}
  75%{opacity: 1;}
  100%{top: -100vh; opacity: 0;}
}
@-o-keyframes floatUp{
  0%{top: 100vh; opacity: 0;}
  25%{opacity: 1;}
  50%{top: 0vh; opacity: .8;}
  75%{opacity: 1;}
  100%{top: -100vh; opacity: 0;}
}
@keyframes floatUp{
  0%{top: 100vh; opacity: 0;}
  25%{opacity: 1;}
  50%{top: 0vh; opacity: .8;}
  75%{opacity: 1;}
  100%{top: -100vh; opacity: 0;}
}


.scroll-down
{
    position: absolute;
    bottom: 10%;
    left: 50%;
}
.scroll-down span:nth-child(2)
{
    animation-delay: -0.2s;
}
.scroll-down span:nth-child(3)
{
    animation-delay: -0.4s;
}
.scroll-down span
{
    display: block;
    width: 20px;
    height: 20px;
    border-bottom: 1px solid #fff;
    border-right: 1px solid #fff;
    transform: rotate(45deg);
    margin: -10px;
    animation: animate 2s infinite;
}
@keyframes animate
{
    0%
  {
        opacity: 0;
        transform: rotate(45deg) translate(-20px,-20px);
    }
    50%
  {
        opacity: 1;
    }
    100%
  {
        opacity: 0;
        transform: rotate(45deg) translate(20px,20px);
    }
}

.timeline::after {
  content: '';
  position: absolute;
  width: 4px;
  background-color: #00F9D6;
  top: 0;
  bottom: 0;
  left: 50%;
  margin-left: 2px;
}

.timeline .timeline-item {
  /* padding: 10px 24px; */
  position: relative;
  background-color: inherit;
  width: 50%;
  opacity: 0;
  transform: translateY(10px);
  transition: all 0.6s ease-out;
  z-index: 1;
}

.timeline .timeline-item::after {
  content: '';
  position: absolute;
  width: 25px;
  height: 25px;
  right: -17px;
  background-color: white;
  border: 4px solid #00F9D6;
  top: 15px;
  border-radius: 50%;
  z-index: 1;
}

.timeline .timeline-item.left {
  padding-right: 24px;
  padding-left: 0px;
  left: 0;
  transform: translateX(-24px) translateY(10px);
}

.timeline .timeline-item.right {
  padding-right: 0px;
  padding-left: 24px;
  left: 50%;
  transform: translateX(24px) translateY(10px);
}

.timeline .timeline-item.show {
  opacity: 1;
  transform: translateY(0);
}

.timeline .timeline-item.right::after {
  left: -9px;
}

@media screen and (max-width: 48rem) {
  .timeline::after {
    left: 31px;
  }

  .timeline .timeline-item {
    width: 100%;
    padding-left: 70px;
    padding-right: 0px;
  }

  .timeline .timeline-item.left::after,
  .timeline .timeline-item.right::after {
    left: 22px;
  }

  .timeline .timeline-item.right {
    left: 0%;
  }
}

.work-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-auto-rows: auto;
  grid-auto-flow: dense;
}

.work-grid .big {
  grid-column: span 2;
  grid-row: span 2;
}

.work-card img {
  transition: transform 0.3s ease-in-out;
}

.work-card:hover img {
  transform: scale(1.1);
}

@media screen and (max-width: 40rem) {
  .work-grid {
    grid-template-columns: 1fr;
  }

  .work-grid .big {
    grid-column: span 1;
    grid-row: span 1;
  }
}

.subtitle-default,
.subtitle-hover {
  transition: opacity 0.3s ease, transform 0.3s ease;
}

.subtitle-default {
  opacity: 1;
  transform: translateY(0)
}

.subtitle-hover {
  position: absolute;
  bottom: 24px;
  left: 24px;
  opacity: 0;
  transform: translateY(8px);
}

.work-card:hover .subtitle-default {
  opacity: 0;
  transform: translateY(-8px);
}

.work-card:hover .subtitle-hover {
  opacity: 1;
  transform: translateY(0);
}

.contact-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  grid-auto-rows: auto;
  gap: 24px;
}

/* 0, 249, 214 */

#form-submit, .pulse-btn {
  border: 0 solid;
  border-radius: 0.5rem;
  box-shadow: inset 0 0 20px rgba(0, 249, 214, 0);
  outline: 1px solid;
  outline-color: rgba(0, 249, 214, .5);
  outline-offset: 0px;
  text-shadow: none;
  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
}

#form-submit .icon,
#form-back .icon {
  transform: translateX(0);
  transition: all 0.1s ease-in-out;
}

#form-submit:hover .icon {
  transform: translateX(2px);
}

#form-back:hover .icon {
  transform: translateX(-2px);
}

#form-submit:hover, .pulse-btn:hover {
  border: 1px solid;
  box-shadow: inset 0 0 20px rgba(0, 249, 2145, .5), 0 0 20px rgba(0, 249, 214, .2);
  outline-color: rgba(0, 249, 214, 0);
  outline-offset: 15px;
  text-shadow: 1px 1px 2px #427388; 
}

.contact-card {
  transform: translateY(0);
  transition: all 0.3s ease-in-out;
}

.contact-card:hover {
  transform: translateY(-4px);
}

.pulse {
  animation-name: pulse-animation;
  animation-duration: 1s;
  animation-delay: 0.8s;
}

@keyframes pulse-animation {
  0% {
    box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.2);
  }
  100% {
    box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
  }
}

/* .case-study-component h2,
.case-study-component h3,
.case-study-component h4 {
  color: #C7C7C8;
} */

.case-study-component h3 {
  font-family: var(--secondary-font-family);
  font-size: 18px;
}

.case-study-component h2 {
  margin-top: 24px;
  font-size: 24px;
  font-weight: 700;
}

.case-study-component h4 {
  font-weight: 600;
  color: #C7C7C8;
}

